Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumObjNumObjField.quorum
class Main
    Number n
    action Main
        number num = 0.0
        n:SetValue(7.5)
        num = cast(number, n)
        if num:GetValue() = 7.5
            output "passed"
        end
    end
end