Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjNumObjField.quorum
class main
    Number n
    Text txt
    action Main
        n:SetValue(7.5)
        txt = cast(Text, n)
    end
end